# music-album-scanner

./: .gitignore  .metadata  ARCHITECTURE.md  LICENSE  PLAY_STORE.md  README.md  ROADMAP.md  analysis_options.yaml  l10n.yaml  pubspec.yaml
.github/workflows/: ci.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  smolvlm_jni.cpp
android/app/src/main/kotlin/com/albumscanner/music_album_scanner/: MainActivity.kt  SmolVLMBatchTestActivity.kt  SmolVLMBridge.kt  SmolVLMTestActivity.kt
integration_test/: app_test.dart  recognition_pipeline_test.dart
l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_pl.dart  app_pl.arb
lib/: main.dart
lib/core/animations/: app_transitions.dart
lib/core/constants/: app_constants.dart
lib/core/errors/: error_mapper.dart  exceptions.dart  retry.dart
lib/core/network/: api_client.dart  connectivity_service.dart
lib/core/services/: accessibility_service.dart  diagnostics_service.dart  haptic_service.dart  performance_service.dart  search_suggestions_service.dart
lib/core/sync/: offline_sync_service.dart
lib/core/theme/: app_colors.dart  app_theme.dart
lib/data/models/: album_model.dart  recognition_result.dart  scan_session.dart
lib/data/repositories/: album_repository.dart
lib/data/services/: recognition_service.dart
lib/data/services/api/: cloud_vision_service.dart  discogs_service.dart  musicbrainz_service.dart
lib/data/services/collection/: batch_scan_service.dart  collection_filter_service.dart  collection_sort_service.dart  collection_stats_service.dart  duplicate_detector_service.dart  wishlist_service.dart
lib/data/services/export_import/: export_service.dart  import_service.dart
lib/data/services/image/: auto_enhancement_service.dart  image_editor_service.dart  perspective_correction_service.dart
lib/data/services/ml/: barcode_scanning_service.dart  cover_embedding_service.dart  image_labeling_service.dart  image_preprocessor.dart  offline_recognition_service.dart  text_extraction_service.dart  tflite_inference_service.dart
lib/data/services/ml/model/: model_download_manager.dart  model_info.dart
lib/data/services/offline/: offline_recognition_service.dart
lib/data/services/sharing/: infographic_generator.dart  instagram_stories_generator.dart  share_service.dart
lib/data/services/storage/: local_storage_service.dart
lib/features/batch/: ensemble_batch_test_screen.dart
lib/features/camera/: scan_screen.dart
lib/features/camera/bloc/: camera_bloc.dart  camera_event.dart  camera_state.dart
lib/features/camera/widgets/: offline_badge.dart
lib/features/collection/: album_detail_screen.dart  collection_screen.dart
lib/features/collection/bloc/: collection_bloc.dart  collection_event.dart  collection_state.dart
lib/features/collection/screens/: batch_scan_screen.dart  collection_screen.dart  duplicates_screen.dart  stats_dashboard_screen.dart
lib/features/collection/widgets/: album_card.dart  filter_sort_sheet.dart  sync_status_bar.dart
lib/features/common/widgets/: empty_state.dart  error_banner.dart  photo_quality_indicator.dart
lib/features/home/: home_screen.dart
lib/features/image_editor/: image_editor_screen.dart  photo_comparison_screen.dart
lib/features/import_export/: import_screen.dart
lib/features/onboarding/: onboarding_screen.dart
lib/features/scan_result/: edit_preview_screen.dart  manual_search_screen.dart  scan_result_screen.dart
lib/features/scan_result/bloc/: scan_result_bloc.dart  scan_result_event.dart  scan_result_state.dart
lib/features/settings/: model_download_screen.dart  settings_screen.dart
lib/features/sharing/: share_export_screen.dart
lib/features/wishlist/: wishlist_screen.dart
lib/services/: smolvlm_service.dart
lib/shared/widgets/: animated_indicators.dart  search_bar_widget.dart  skeleton_loaders.dart  swipe_actions.dart
test/: scoring_test.dart  widget_test.dart
test/core/errors/: exceptions_test.dart  retry_test.dart
test/core/network/: api_client_test.dart
test/core/services/: diagnostics_service_test.dart
test/data/models/: album_test.dart  scan_result_test.dart
test/data/repositories/: album_repository_test.dart
test/data/services/: discogs_service_test.dart  musicbrainz_service_test.dart  recognition_service_test.dart
test/features/collection/: collection_bloc_test.dart  collection_screen_test.dart
test/features/home/: home_screen_test.dart
test/features/scan_result/: scan_result_bloc_test.dart
test/helpers/: hive_mock.dart  test_helpers.dart
